--- a/ormconfig.json
+++ b/ormconfig.json
@@ -4,6 +4,7 @@
    "migrations": [
       "./src/database/migrations/**.ts"
    ],
+   "logging": true,
    "entities": ["./src/models/**.ts"],
    "cli": {
       "migrationsDir": "./src/database/migrations"
